--- a/AngularRecipe/AngularRecipe/AngularRecipe.csproj
+++ b/AngularRecipe/AngularRecipe/AngularRecipe.csproj
@@ -67,6 +67,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="HtmlPage1.html" />
     <Content Include="Scripts\angular-animate.js" />
     <Content Include="Scripts\angular-animate.min.js" />
     <Content Include="Scripts\angular-aria.js" />
